--- a/Sources/KindleLibrarySynchronizer.csproj
+++ b/Sources/KindleLibrarySynchronizer.csproj
@@ -48,6 +48,8 @@
   <ItemGroup>
     <Compile Include="BookInfo.cs" />
     <Compile Include="Config.cs" />
+    <Compile Include="BookFolder.cs" />
+    <Compile Include="FunctionalComparer.cs" />
     <Compile Include="FB2.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="MainForm.cs">
