--- a/Sources/KindleLibrarySynchronizer.csproj
+++ b/Sources/KindleLibrarySynchronizer.csproj
@@ -53,6 +53,12 @@
     <Compile Include="BookInfo.cs" />
     <Compile Include="Config.cs" />
     <Compile Include="BookFolder.cs" />
+    <Compile Include="SynchroList.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="SynchroList.Designer.cs">
+      <DependentUpon>SynchroList.cs</DependentUpon>
+    </Compile>
     <Compile Include="FunctionalComparer.cs" />
     <Compile Include="FB2.cs" />
     <Compile Include="Logger.cs" />
@@ -77,6 +83,10 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Utils.cs" />
+    <EmbeddedResource Include="SynchroList.resx">
+      <DependentUpon>SynchroList.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
