--- a/Sources/KindleLibrarySynchronizer.csproj
+++ b/Sources/KindleLibrarySynchronizer.csproj
@@ -49,10 +49,15 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Actions.cs" />
     <Compile Include="BookComparer.cs" />
     <Compile Include="BookInfo.cs" />
     <Compile Include="Config.cs" />
     <Compile Include="BookFolder.cs" />
+    <Compile Include="MainForm.Actions.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="SynchroList.cs">
       <SubType>UserControl</SubType>
     </Compile>
