Toolbar and status bar added

--- a/Sources/KindleLibrarySynchronizer.csproj
+++ b/Sources/KindleLibrarySynchronizer.csproj
@@ -118,6 +118,42 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Select Changed.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Select Deleted.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Select New.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Compare.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Show Changed.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Show Deleted.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Show New.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Show Actual.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Show Ignored.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Delete.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Options.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Convert.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
