--- a/Sources/KindleLibrarySynchronizer.csproj
+++ b/Sources/KindleLibrarySynchronizer.csproj
@@ -49,48 +49,48 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Actions.cs" />
-    <Compile Include="BookComparer.cs" />
-    <Compile Include="BookInfo.cs" />
+    <Compile Include="Library\BookComparer.cs" />
+    <Compile Include="Library\BookFolder.cs" />
+    <Compile Include="Library\BookInfo.cs" />
+    <Compile Include="Library\FB2.cs" />
+    <Compile Include="Library\LibraryInfo.cs" />
+    <Compile Include="Utils\Actions.cs" />
     <Compile Include="Globals.cs" />
-    <Compile Include="BookFolder.cs" />
-    <Compile Include="LibraryInfo.cs" />
     <Compile Include="MainForm.Actions.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="SynchroList.cs">
+    <Compile Include="Controls\SynchroList.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="SynchroList.Designer.cs">
+    <Compile Include="Controls\SynchroList.Designer.cs">
       <DependentUpon>SynchroList.cs</DependentUpon>
     </Compile>
-    <Compile Include="FunctionalComparer.cs" />
-    <Compile Include="FB2.cs" />
-    <Compile Include="Logger.cs" />
+    <Compile Include="Utils\FunctionalComparer.cs" />
+    <Compile Include="Utils\Logger.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="MultiSelectTreeview.cs">
+    <Compile Include="Controls\MultiSelectTreeview.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SynchroView.cs">
+    <Compile Include="Controls\SynchroView.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="SynchroView.Designer.cs">
+    <Compile Include="Controls\SynchroView.Designer.cs">
       <DependentUpon>SynchroView.cs</DependentUpon>
     </Compile>
-    <Compile Include="TreeViewExtensions.cs">
+    <Compile Include="Controls\TreeViewExtensions.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Utils.cs" />
+    <Compile Include="Utils\Utils.cs" />
     <Compile Include="Utils\InvariantConverter.cs" />
-    <EmbeddedResource Include="SynchroList.resx">
+    <EmbeddedResource Include="Controls\SynchroList.resx">
       <DependentUpon>SynchroList.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
@@ -107,7 +107,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="SynchroView.resx">
+    <EmbeddedResource Include="Controls\SynchroView.resx">
       <DependentUpon>SynchroView.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
