--- a/Sources/KindleLibrarySynchronizer.csproj
+++ b/Sources/KindleLibrarySynchronizer.csproj
@@ -49,6 +49,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OperationProgressForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OperationProgressForm.Designer.cs">
+      <DependentUpon>OperationProgressForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Library\BookComparer.cs" />
     <Compile Include="Library\BookFolder.cs" />
     <Compile Include="Library\BookInfo.cs" />
@@ -99,6 +105,9 @@
     <EmbeddedResource Include="Controls\SynchroList.resx">
       <DependentUpon>SynchroList.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OperationProgressForm.resx">
+      <DependentUpon>OperationProgressForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
