--- a/Sources/KindleLibrarySynchronizer.csproj
+++ b/Sources/KindleLibrarySynchronizer.csproj
@@ -51,6 +51,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BooksOperation.cs" />
+    <Compile Include="LogViewForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LogViewForm.Designer.cs">
+      <DependentUpon>LogViewForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="OperationProgressForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -108,6 +114,9 @@
       <DependentUpon>SynchroList.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="LogViewForm.resx">
+      <DependentUpon>LogViewForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="OperationProgressForm.resx">
       <DependentUpon>OperationProgressForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -116,6 +125,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="OptionsForm.resx">
       <DependentUpon>OptionsForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
